[gd_scene load_steps=22 format=3 uid="uid://dt3nr74rtmta0"]

[ext_resource type="Texture2D" uid="uid://cglk2ybk31ho7" path="res://Scenes/Bracconiere/bosco-difesa-grande.jpg" id="1_2rr16"]
[ext_resource type="Texture2D" uid="uid://qqktdshsew62" path="res://Scenes/Bracconiere/Bracconiere modificato idle2.png" id="2_cd0vm"]
[ext_resource type="Texture2D" uid="uid://b27edy2sjif2l" path="res://Scenes/menu/GUI/Tiny Wonder UI Free/bars free modifica.png" id="3_5wev6"]
[ext_resource type="Texture2D" uid="uid://syrmyyuedhuk" path="res://Rettangolo_dialoghi.png" id="3_7qdsu"]
[ext_resource type="Script" path="res://Scenes/Bracconiere/Script/StateMachine.gd" id="4_nv2p2"]
[ext_resource type="Script" path="res://Scenes/Bracconiere/Script/SelectState.gd" id="5_5ekkk"]
[ext_resource type="Script" path="res://Scenes/Bracconiere/Script/ParlaState.gd" id="6_u7oi3"]
[ext_resource type="Script" path="res://Scenes/Bracconiere/Script/DifesaState.gd" id="7_y06uv"]
[ext_resource type="Script" path="res://Scenes/Bracconiere/PunteggioState.gd" id="8_cl11c"]
[ext_resource type="Script" path="res://Scenes/Bracconiere/FinalState.gd" id="9_pqyxq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ul0im"]
atlas = ExtResource("3_5wev6")
region = Rect2(1, 53, 46, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxuo1"]
atlas = ExtResource("3_5wev6")
region = Rect2(0, 4, 48, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0qtr"]
atlas = ExtResource("3_5wev6")
region = Rect2(1, 37, 46, 5)

[sub_resource type="Animation" id="Animation_ri3mj"]
resource_name = "Idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(7, 2), Vector2i(8, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(570, 342)]
}

[sub_resource type="Animation" id="Animation_s63nj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(524, 342)]
}

[sub_resource type="Animation" id="Animation_ur7k5"]
resource_name = "CamminaSX"
length = 4.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.833333, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7, 3, 3.3, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 9), Vector2i(1, 9), Vector2i(2, 9), Vector2i(2, 9), Vector2i(4, 9), Vector2i(5, 9), Vector2i(6, 9), Vector2i(7, 9), Vector2i(8, 9), Vector2i(9, 9), Vector2i(1, 9), Vector2i(3, 9), Vector2i(0, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2, 1.8, 2.4, 3, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(570, 342), Vector2(520, 342), Vector2(470, 342), Vector2(400, 342), Vector2(350, 342), Vector2(300, 342), Vector2(250, 342)]
}

[sub_resource type="Animation" id="Animation_fmfa2"]
resource_name = "Spara"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 0.9, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7), Vector2i(5, 7), Vector2i(6, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(250, 342)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fk7tn"]
_data = {
"CamminaSX": SubResource("Animation_ur7k5"),
"Idle": SubResource("Animation_ri3mj"),
"RESET": SubResource("Animation_s63nj"),
"Spara": SubResource("Animation_fmfa2")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_en5b4"]
atlas = ExtResource("3_5wev6")
region = Rect2(1, 53, 46, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaepu"]
atlas = ExtResource("3_5wev6")
region = Rect2(0, 4, 48, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j2dx"]
atlas = ExtResource("3_5wev6")
region = Rect2(1, 37, 46, 5)

[node name="CombatScene" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Sfondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_2rr16")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(524, 342)
scale = Vector2(4, 4)
texture = ExtResource("2_cd0vm")
hframes = 13
vframes = 21
frame = 33
region_rect = Rect2(0, 0, 832, 1360)

[node name="ConvinzioneBracconiere" type="TextureProgressBar" parent="Sprite2D"]
anchors_preset = -1
anchor_left = -1.039
anchor_top = -0.341
anchor_right = 2.086
anchor_bottom = -0.034
offset_left = 9.746
offset_top = -23.426
offset_right = -75.254
offset_bottom = -25.074
tooltip_text = "Convinzione del bracconiere"
value = 100.0
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_ul0im")
texture_over = SubResource("AtlasTexture_mxuo1")
texture_progress = SubResource("AtlasTexture_n0qtr")

[node name="Label" type="Label" parent="Sprite2D/ConvinzioneBracconiere"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.392
anchor_top = 0.141
anchor_right = 0.602
anchor_bottom = 0.859
offset_left = 0.0499992
offset_top = -0.00599957
offset_right = 21.05
offset_bottom = 11.506
scale = Vector2(0.5, 0.5)
text = "100%"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_fk7tn")
}

[node name="SelectUI" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Bottom" type="TextureRect" parent="SelectUI"]
layout_mode = 0
offset_top = 450.0
offset_right = 1152.0
offset_bottom = 647.0
texture = ExtResource("3_7qdsu")
expand_mode = 1

[node name="Istruzioni" type="TextEdit" parent="SelectUI/Bottom"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013
anchor_top = 0.437
anchor_right = 0.36
anchor_bottom = 0.848
offset_left = 20.024
offset_top = -1.089
offset_right = 20.28
offset_bottom = -1.05595
text = " Cerca di convincere il bracconiere"
placeholder_text = "Usa fuga per tornare alla mappa.
Aiuta gli animali a sfuggire al bracconiere"

[node name="ActionButtons" type="HBoxContainer" parent="SelectUI/Bottom"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.641
anchor_top = 0.173
anchor_right = 0.95
anchor_bottom = 0.873
offset_left = -248.432
offset_top = -12.081
offset_right = -0.400024
offset_bottom = 0.0189667

[node name="SpeakButton" type="Button" parent="SelectUI/Bottom/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Usa PARLA per convincere il bracconiere!"
text = "PARLA"

[node name="VSeparator" type="VSeparator" parent="SelectUI/Bottom/ActionButtons"]
layout_mode = 2

[node name="FugaButton" type="Button" parent="SelectUI/Bottom/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Usa FUGA per tornare alla mappa"
text = "FUGA"

[node name="ParlaUI" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Bottom" type="TextureRect" parent="ParlaUI"]
layout_mode = 0
offset_top = 450.0
offset_right = 1152.0
offset_bottom = 647.0
texture = ExtResource("3_7qdsu")
expand_mode = 1

[node name="Frasi" type="VBoxContainer" parent="ParlaUI/Bottom"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.025
anchor_right = 0.825
anchor_bottom = 0.959
offset_left = 0.0879998
offset_top = 0.0749998
offset_right = -0.400024
offset_bottom = 0.0769958

[node name="Button1" type="Button" parent="ParlaUI/Bottom/Frasi"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="ParlaUI/Bottom/Frasi"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button3" type="Button" parent="ParlaUI/Bottom/Frasi"]
layout_mode = 2
size_flags_vertical = 3

[node name="Indietro" type="VBoxContainer" parent="ParlaUI/Bottom"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.849
anchor_top = 0.127
anchor_right = 0.977
anchor_bottom = 0.873
offset_left = -0.0480347
offset_top = -0.019001
offset_right = -0.504028
offset_bottom = 0.0189972

[node name="BackButton" type="Button" parent="ParlaUI/Bottom/Indietro"]
layout_mode = 2
size_flags_vertical = 3
text = "Indietro"

[node name="DifesaUI" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Bottom" type="TextureRect" parent="DifesaUI"]
layout_mode = 0
offset_top = 450.0
offset_right = 1152.0
offset_bottom = 647.0
texture = ExtResource("3_7qdsu")
expand_mode = 1

[node name="Istruzioni" type="TextEdit" parent="DifesaUI/Bottom"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013
anchor_top = 0.437
anchor_right = 0.36
anchor_bottom = 0.848
offset_left = 21.024
offset_top = 0.910995
offset_right = 21.28
offset_bottom = 0.944046
text = "Schiva le frecce usando i tasti freccia"
editable = false

[node name="Minigioco" type="TextureRect" parent="DifesaUI"]
layout_mode = 0
offset_left = 463.0
offset_top = 28.0
offset_right = 1127.0
offset_bottom = 619.0
texture = ExtResource("3_7qdsu")

[node name="PlayerBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07
anchor_top = 0.127
anchor_right = 0.07
anchor_bottom = 0.127
offset_left = 105.0
offset_top = 484.0
offset_right = 438.0
offset_bottom = 512.0
value = 100.0
fill_mode = 1
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_en5b4")
texture_over = SubResource("AtlasTexture_xaepu")
texture_progress = SubResource("AtlasTexture_6j2dx")

[node name="TextEdit" type="TextEdit" parent="PlayerBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.21
anchor_top = 0.091
anchor_right = -0.045
anchor_bottom = 1.0
offset_left = -0.0699997
offset_top = -9.548
offset_right = -0.0149994
offset_bottom = 3.0
text = "   TU"
placeholder_text = "TU"
editable = false

[node name="Label" type="Label" parent="PlayerBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.417
anchor_right = 0.538
anchor_bottom = 0.929
offset_left = 0.138992
offset_top = 2.0
offset_right = -0.154022
offset_bottom = -1.012
text = "100%"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_nv2p2")

[node name="SelectState" type="Node" parent="StateMachine"]
script = ExtResource("5_5ekkk")

[node name="ParlaState" type="Node" parent="StateMachine"]
script = ExtResource("6_u7oi3")

[node name="DifesaState" type="Node" parent="StateMachine"]
script = ExtResource("7_y06uv")

[node name="PunteggioState" type="Node" parent="StateMachine"]
script = ExtResource("8_cl11c")

[node name="FinalState" type="Node" parent="StateMachine"]
script = ExtResource("9_pqyxq")
